feat: Updated company name and added founding year Renamed the business entity to Olga Lissete LLC to reflect the official branding. It also included the year of establishment (2025) to provide visitors with clearer context about our history and experience.

--- a/about-us.html
+++ b/about-us.html
@@ -521,12 +521,12 @@
                                                                     <span
                                                                         class="uc-style-31206944385 uc-page-font-paragraph"
                                                                         style="font-family:Montserrat;font-weight:400;font-size:16px;line-height:1.7em;color:#000000;">Since
-                                                                        2009, Olga Lissete Cleaners has given top notch
-                                                                        commercialand residential floor services. With
-                                                                        over 15 years of experiencethey have expanded
+                                                                        2015, Olga Lissete LLC Cleaners has given top notch
+                                                                        commercial and residential floor services. With
+                                                                        over 10 years of experiencethey have expanded
                                                                         the horizon towards floor care.
                                                                         <br>
-                                                                        Olga Lissete Cleaners is not just a cleaning
+                                                                        Olga Lissete LLC Cleaners is not just a cleaning
                                                                         company, but also, can maintain your floorlife
                                                                         for many years to come.
                                                                         <br>
@@ -660,10 +660,10 @@
                                                                                     style="font-family: times new roman, times, serif;">
                                                                                     Our commercial cleaning service specializes in
                                                                                     businesses (big or small),<br>
-                                                                                    offices, schools and more. Olga Lisset Cleaners
+                                                                                    offices, schools and more. Olga Lissete LLC Cleaners
                                                                                     has been providing professional <br>
                                                                                     cleaning and maintenance services to different
-                                                                                    businesses since 2009.
+                                                                                    businesses since 2015.
                                                                                 </span>
                                                                             </em>
                                                                         </strong>
@@ -691,7 +691,7 @@
                                 <div id="jm-footer-right" class="span8">
                                     <div class="jm-module-raw hidden-phone">
                                         <div class="customhidden-phone">
-                                            <p style="text-align: right;"><span style="color: #ffffff;">Olga Lissete
+                                            <p style="text-align: right;"><span style="color: #ffffff;">Olga Lissete LLC
                                                     Cleaners. - 2025</span></p>
                                         </div>
                                     </div>
