--- a/contact-us.html
+++ b/contact-us.html
@@ -1150,7 +1150,7 @@
                                                                         style="font-family: times new roman, times, serif;">
                                                                         Our commercial cleaning service specializes in
                                                                         businesses (big or small),<br> offices, schools
-                                                                        and more. Olga lissete Cleaners has been providing
+                                                                        and more. Olga lissete LLC Cleaners has been providing
                                                                         professional <br>cleaning and maintenance
                                                                         services to different businesses since
                                                                         2020.
@@ -1186,7 +1186,7 @@
                                     <div class="jm-module-raw hidden-phone">
 
                                         <div class="customhidden-phone">
-                                            <p style="text-align: right;"><span style="color: #ffffff;">Olga Lissete
+                                            <p style="text-align: right;"><span style="color: #ffffff;">Olga Lissete LLC
                                                     Cleaners. - 2020</span></p>
                                         </div>
                                     </div>
