--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                                     <div id="jm-logo-sitedesc" class="pull-left ">
                                         <div id="jm-logo">
                                             <a href="/images/logos/FullColorlogo.png">
-                                                <img src="/images/logos/logo.png" alt="Olga Lissete Cleaners">
+                                                <img src="/images/logos/logo.png" alt="Olga Lissete LLC Cleaners">
                                             </a>
                                         </div>
                                     </div>
@@ -830,7 +830,7 @@
                                                                         style="font-family:'Roboto Slab';font-weight:600;font-size:49px;line-height:1.2em;color:#FFFFFF;text-shadow: rgba(0, 0, 0, 0.8) 2px 2px 2px;">The
                                                                         Best Carpet, Tile Grout and Upholstery Steam
                                                                         Cleaning Services. Serving All Central Florida
-                                                                        Since 2009</span>
+                                                                        Since 2015</span>
                                                                 </div>
                                                                 <!-- end Title -->
                                                             </div>
@@ -859,7 +859,7 @@
                                                                         style="font-family:'Roboto Slab';font-weight:600;font-size:34px;line-height:1.7em;color:#FFFFFF;text-shadow: rgba(0, 0, 0, 0.8) 2px 2px 2px;">The
                                                                         Best Carpet, Tile Grout and Upholstery Steam
                                                                         Cleaning Services. Serving All Central Florida
-                                                                        Since 2009</span>
+                                                                        Since 2015</span>
                                                                 </div>
                                                                 <!-- end Title -->
                                                             </div>
@@ -902,7 +902,7 @@
                                                                     <span
                                                                         class="uc-style-144081119833 uc-page-font-title"
                                                                         style="font-family:'Roboto Slab';font-weight:600;font-size:35px;line-height:1.2em;color:#00349A;">Benefits
-                                                                        Of Allowing Olga Lissete Cleaners To Clean your
+                                                                        Of Allowing Olga Lissete LLC Cleaners To Clean your
                                                                         Facilities:</span>
                                                                 </div>
                                                                 <!-- end Title -->
@@ -1051,17 +1051,17 @@
                                             <div class="jm-module-content clearfix notitle">
                                                 <div class="custom">
                                                     <p style="text-align: center;">
-                                                        <span style="font-size: 16pt; line-height: 22pt; margin;">
+                                                        <span style="font-size: 16pt; line-height: 22pt;">
                                                             <strong>
                                                                 <em>
                                                                     <span
                                                                         style="font-family: times new roman, times, serif;">
                                                                         Our commercial cleaning service specializes in
                                                                         businesses (big or small),<br>
-                                                                        offices, schools and more. Olga Lisset Cleaners
+                                                                        offices, schools and more. Olga Lissete Cleaners
                                                                         has been providing professional <br>
                                                                         cleaning and maintenance services to different
-                                                                        businesses since 2009.
+                                                                        businesses since 2015.
                                                                     </span>
                                                                 </em>
                                                             </strong>
@@ -1091,7 +1091,7 @@
                                 <div id="jm-footer-right" class="span8">
                                     <div class="jm-module-raw hidden-phone">
                                         <div class="customhidden-phone">
-                                            <p style="text-align: right;"><span style="color: #ffffff;">Olga LisseteCleaners. - 2020</span></p>
+                                            <p style="text-align: right;"><span style="color: #ffffff;">Olga Lissete Cleaners. - 2020</span></p>
                                         </div>
                                     </div>
                                 </div>
